@@ -1,6 +1,6 @@
 Package: mia
 Type: Package
-Version: 1.13.37
+Version: 1.13.38
 Authors@R:
     c(person(given = "Felix G.M.", family = "Ernst", role = c("aut"),
              email = "felix.gm.ernst@outlook.com",
@@ -93,6 +93,7 @@ Suggests:
     patchwork,
     BiocStyle,
     yaml,
+    miaViz,
     phyloseq,
     dada2,
     stringr,
