@@ -384,6 +384,7 @@ importFrom(stats,glm)
 importFrom(stats,hclust)
 importFrom(stats,lm)
 importFrom(stats,median)
+importFrom(stats,na.fail)
 importFrom(stats,na.omit)
 importFrom(stats,p.adjust)
 importFrom(stats,runif)
