@@ -54,6 +54,9 @@
 #'   \item{\code{scale}: \code{Logical scalar}. Should the expression values be
 #'   standardized? \code{scale} is disabled when using \code{*RDA} functions.
 #'   Please scale before performing RDA. (Default: \code{TRUE})}
+#'   \item{\code{na.action}: \code{function}. Action to take when missing
+#'   values for any of the variables in \code{formula} are encountered.
+#'   (Default: \code{na.fail})}
 #'   \item{\code{full} \code{Logical scalar}. should all the results from the
 #'   significance calculations be returned. When \code{full=FALSE}, only
 #'   summary tables are returned. (Default: \code{FALSE})}
@@ -68,7 +71,8 @@
 #' 
 #' @details
 #'   *CCA functions utilize \code{vegan:cca} and *RDA functions \code{vegan:dbRDA}.
-#'   By default dbRDA is done with euclidean distances which equals to RDA.
+#'   By default, dbRDA is done with euclidean distances, which is equivalent to
+#'   RDA. 
 #'   
 #'   Significance tests are done with \code{vegan:anova.cca} (PERMANOVA). Group
 #'   dispersion, i.e., homogeneity within groups is analyzed with 
@@ -90,44 +94,66 @@
 #' and \code{\link[vegan:dbrda]{dbrda}}
 #'
 #' @examples
-#' library(scater)
-#' data(GlobalPatterns)
-#' GlobalPatterns <- addCCA(GlobalPatterns, data ~ SampleType)
-#' plotReducedDim(GlobalPatterns,"CCA", colour_by = "SampleType")
-#' 
-#' # Fetch significance results
-#' attr(reducedDim(GlobalPatterns, "CCA"), "significance")
+#' library(miaViz)
+#' data("enterotype", package = "mia")
+#' tse <- enterotype
 #'
-#' GlobalPatterns <- addRDA(GlobalPatterns, data ~ SampleType)
-#' plotReducedDim(GlobalPatterns,"CCA", colour_by = "SampleType")
-#' 
+#' # Perform CCA and exclude any sample with missing ClinicalStatus
+#' tse <- addCCA(tse,
+#'               formula = data ~ ClinicalStatus,
+#'               na.action = na.exclude)
+#'
+#' # Plot CCA
+#' plotCCA(tse, "CCA",
+#'         colour_by = "ClinicalStatus")
+#'
+#' # Fetch significance results
+#' attr(reducedDim(tse, "CCA"), "significance")
+#'
+#' tse <- transformAssay(tse, method = "relabundance")
+#'
 #' # Specify dissimilarity measure
-#' GlobalPatterns <- transformAssay(GlobalPatterns, method = "relabundance")
-#' GlobalPatterns <- addRDA(
-#'     GlobalPatterns, data ~ SampleType, assay.type = "relabundance",
-#'     method = "bray")
-#' 
+#' tse <- addRDA(tse,
+#'               formula = data ~ ClinicalStatus,
+#'               assay.type = "relabundance",
+#'               method = "bray",
+#'               name = "RDA_bray")
+#'
 #' # To scale values when using *RDA functions, use
 #' # transformAssay(MARGIN = "features", ...) 
-#' tse <- GlobalPatterns
-#' tse <- transformAssay(tse, MARGIN = "features", method = "standardize")
+#' tse <- transformAssay(tse,
+#'                       method = "standardize",
+#'                       MARGIN = "features")
+#'
 #' # Data might include taxa that do not vary. Remove those because after
 #' # z-transform their value is NA
-#' tse <- tse[ rowSums( is.na( assay(tse, "standardize") ) ) == 0, ]
+#' tse <- tse[rowSums(is.na(assay(tse, "standardize"))) == 0, ]
+#'
 #' # Calculate RDA
-#' tse <- addRDA(
-#'     tse, formula = data ~ SampleType, assay.type = "standardize",
-#'     name = "rda_scaled", na.action = na.omit)
-#' # Plot
-#' plotReducedDim(tse,"rda_scaled", colour_by = "SampleType")
+#' tse <- addRDA(tse,
+#'               formula = data ~ ClinicalStatus,
+#'               assay.type = "standardize",
+#'               name = "rda_scaled",
+#'               na.action = na.omit)
+#'
+#' # Plot RDA
+#' plotRDA(tse, "rda_scaled",
+#'         colour_by = "ClinicalStatus")
+#'
 #' # A common choice along with PERMANOVA is ANOVA when statistical significance
-#' # of homogeneity of groups is analysed. Moreover, full significance test results
-#' # can be returned.
-#'  tse <- addRDA(
-#'      tse, data ~ SampleType, homogeneity.test = "anova", full = TRUE)
-#' # Example showing how to pass extra parameters, such as 'permutations', to anova.cca
-#' tse <- addRDA(tse, data ~ SampleType, permutations = 500)
-#' 
+#' # of homogeneity of groups is analysed. Moreover, full significance test
+#' # results can be returned.
+#' tse <- addRDA(tse,
+#'               formula = data ~ ClinicalStatus,
+#'               homogeneity.test = "anova",
+#'               full = TRUE)
+#'
+#' # Example showing how to pass extra parameters, such as 'permutations',
+#' # to anova.cca
+#' tse <- addRDA(tse,
+#'               formula = data ~ ClinicalStatus,
+#'               permutations = 500)
+#'
 NULL
 
 #' @rdname runCCA
@@ -173,8 +199,9 @@ setGeneric("addRDA", signature = c("x"),
     return(dep_var)
 }
 
-#' @importFrom stats as.formula
-.calculate_cca <- function(x, formula, variables, scores,  scale = TRUE, ...){
+#' @importFrom stats as.formula na.fail
+.calculate_cca <- function(
+        x, formula, variables, scores, scale = TRUE, na.action = na.fail, ...){
     # input check
     if(!.is_a_bool(scale)){
         stop("'scale' must be TRUE or FALSE.", call. = FALSE)
@@ -182,19 +209,28 @@ setGeneric("addRDA", signature = c("x"),
     #
     x <- as.matrix(t(x))
     variables <- as.data.frame(variables)
+    # Instead of letting na.action pass through, give informative error
+    # about missing values.
+    if( any(is.na(variables)) && isTRUE(all.equal(na.action, na.fail)) ){
+        stop("Variables contain missing values. Set na.action to na.exclude",
+             " to remove samples with missing values.", call. = FALSE)
+    }
+    
     if(ncol(variables) > 0L && !missing(formula)){
         dep_var_name <- .get_dependent_var_name(formula)
         assign(dep_var_name, x)
         # recast formula in current environment
         form <- as.formula(paste(as.character(formula)[c(2,1,3)],
                                  collapse = " "))
-        cca <- vegan::cca(form, data = variables, scale = scale, ...)
+        cca <- vegan::cca(form, data = variables, scale = scale,
+                          na.action = na.action, ...)
         X <- cca$CCA
     } else if(ncol(variables) > 0L) {
-        cca <- vegan::cca(X = x, Y = variables, scale = scale, ...)
+        cca <- vegan::cca(X = x, Y = variables, scale = scale,
+                          na.action = na.action, ...)
         X <- cca$CCA
     } else {
-        cca <- vegan::cca(X = x, scale = scale, ...)
+        cca <- vegan::cca(X = x, scale = scale, na.action = na.action, ...)
         X <- cca$CA
     }
     # Create the matrix to be returned
@@ -320,8 +356,10 @@ runCCA <- function(x,...){
 }
 
 #' @importFrom vegan sppscores<-
+#' @importFrom stats na.fail
 .calculate_rda <- function(
-        x, formula, variables, scores, method = distance, distance = "euclidean", ...){
+        x, formula, variables, scores, method = distance,
+        distance = "euclidean", na.action = na.fail, ...){
     #
     # Transpose and ensure that the table is in matrix format
     x <- as.matrix(t(x))
@@ -341,11 +379,21 @@ runCCA <- function(x,...){
     if( !missing(variables) ){
         # Convert into data.frame
         variables <- as.data.frame(variables)
+        # Instead of letting na.action pass through, give informative error
+        # about missing values.
+        if( any(is.na(variables)) && isTRUE(all.equal(na.action, na.fail)) ){
+            stop("Variables contain missing values. Set na.action to ",
+                "na.exclude to remove samples with missing values.",
+                call. = FALSE)
+        }
+        
         # Calculate RDA with variables
-        rda <- vegan::dbrda(formula = form, data = variables, distance = method, ...)
+        rda <- vegan::dbrda(formula = form, data = variables, distance = method,
+                            na.action = na.action, ...)
     } else{
         # Otherwise calculate RDA without variables
-        rda <- vegan::dbrda(formula = form, distance = method, ...)
+        rda <- vegan::dbrda(formula = form, distance = method,
+                            na.action = na.action, ...)
     }
     # Get CCA
     if( !is.null(rda$CCA) ){
@@ -376,21 +424,22 @@ runCCA <- function(x,...){
 
 # Add RDA/CCA to reducedDim
 .add_object_to_reduceddim <- function(
-        tse, rda, name, subset_result = FALSE, ...){
+        tse, rda, name, subset.result = TRUE, ...){
     # Test subset
-    if( !.is_a_bool(subset_result) ){
-        stop("'subset_result' must be TRUE or FALSE.", call. = FALSE)
+    if( !.is_a_bool(subset.result) ){
+        stop("'subset.result' must be TRUE or FALSE.", call. = FALSE)
     }
     #
     # If samples do not match / there were samples without appropriate metadata
     # and they are now removed
-    if( !all(colnames(tse) %in% rownames(rda)) && subset_result ){
+    if( !all(colnames(tse) %in% rownames(rda)) && subset.result ){
         # Take a subset
         tse <- tse[ , rownames(rda) ]
         # Give a message
-        message("Certain samples are removed from the result because they did ",
-                "not include sufficient metadata.")
-    } else if( !all(colnames(tse) %in% rownames(rda)) && !subset_result ){
+        warning(
+            "Certain samples are removed from the result because they did ",
+            "not include sufficient metadata.", call. = FALSE)
+    } else if( !all(colnames(tse) %in% rownames(rda)) && !subset.result ){
         # If user do not want to subset the data
         # Save attributes from the object
         attr <- attributes(rda)
